--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -18,29 +18,38 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <br>
         </ul>
       </section>
 
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>CSS stands for cascading style sheet</li>
+          <li>Margin indicates how much space we want around the outside of an element.</li>
+          <li>Padding indicates how much space we want around the content inside of an element.</li>
+          <br>
         </ul>
       </section>
 
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
+          <li>Git is version control</li>
+          <li>git status: This git command checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: This git command creates a new branch and switches to it.</li>
+          <br>
         </ul>
       </section>
-
+      
       <section class="card" id="javascript-section">
-        <h2>JavaScript</h2>
-     <ul>
-       <li>Enter your JavaScript notes here</li>
-     </ul>
+        <h2>Javascript</h2>
+        <ul>
+          <li>Javascript enables functionality and interation with web applications.</li>
+          <br>
+        </ul>
       </section>
     </main>
 
@@ -49,3 +58,4 @@
     </footer>
   </body>
 </html>
+
