updated README and finalised application styling

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Prework Study Guide</title>
+    <title>Pre-Work Study Guide</title>
   </head>
 
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
+      <h1>Pre-Work Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie."/>
-      <h2>Open the Console to See What's Happening</h2>
+      <h2>Open the developer console for a study topic recommendation!</h2>
     </header>
 
     <main>
@@ -35,12 +35,13 @@
         <h2>CSS</h2>
         <ul>
           <li>CSS stands for cascading style sheet, and is how webpages are styled!</li>
-          <li>CSS files are linked in the <b>head</b> element of the HTML document by using link and href attributes.</li>
-          <code>link rel="stylesheet" href="./assets/style.css"</code>
           <li>CSS uses selectors to target elements on an HTML page to style them. Some examples of CSS selectors are type selectors, class selectors and id selectors.</li>
           <li>Margin indicates how much space we want around the outside of an element.</li>
           <li>Padding indicates how much space we want around the content inside of an element.</li>
           <li>Commenting out CSS code is done like this: /*this code has been commented out*/</li>
+          <li>CSS files are linked in the <b>head</b> element of the HTML document by using link and href attributes.</li>
+          <br>
+          <p>link rel="stylesheet" href="./assets/style.css"</p>
           <br>
         </ul>
       </section>
@@ -67,25 +68,25 @@
           <li>Javascript enables functionality and interation with web applications!</li>
           <li>Each line of Javascript code must end with a semi colon (;).</li>
           <li>Javascript is read from top to bottom, this is called control flow! Code will execute from the first statement at the top of our .js file, down to the last statement at the bottom.</li>
-          <li>An array is a single variable that is used to hold a group of data. Generally, this data is related in some way. Arrays can store different types of data, such as strings (text), numbers and boolean values (true, false).</li>
-          <li>When storing strings inside of an array, the data must be surrounded by quotation marks. For example, circle would be written as “circle”. Numbers and boolean value data types do not need to be surrounded by quotation marks when stored in an array.</li>
-          <li>Each item we store in an array, is given a unique identifier called an index. In Javascript, arrays are zero indexed and sequential. This means the first item of the array will always be 0, and the following items increase in increments of 1 each time.</li>
-          <li>We can target an individual data type from an array by calling upon its index. For example, we will target the “triangle” data from the following array by calling upon its index number below.</li>
-          <code>var shapes = [“triangle”, “square”, “circle”];</code>
-          <br>
-          <code>console.log(shapes[0])</code>
-          <li>The result from the above code will log "triangle" to the console.</li>
           <li>At the most basic level, a function is a set of instructions that tells a computer how to perform a certain task.</li>
           <li>A function is different from a for loop or conditional statement, because functions do not automatically execute. Instead, functions must be called by name in order to execute it.</li>
           <li>A functions name is always followed by parentheses (), which includes the parameters of the function.</li>
           <li>Commenting out Javascript code is done like this: /*this code has been commented out*/</li>
+          <li>An array is a single variable that is used to hold a group of data. Generally, this data is related in some way. Arrays can store different types of data, such as strings (text), numbers and boolean values (true, false).</li>
+          <li>When storing strings inside of an array, the data must be surrounded by quotation marks. For example, circle would be written as “circle”. Numbers and boolean value data types do not need to be surrounded by quotation marks when stored in an array.</li>
+          <li>Each item we store in an array, is given a unique identifier called an index. In Javascript, arrays are zero indexed and sequential. This means the first item of the array will always be 0, and the following items increase in increments of 1 each time.</li>
+          <li>We can target an individual data type from an array by calling upon its index. For example, we will target the “triangle” data from the following array by calling upon its index number below.</li>
+          <li>The result from the above code will log "triangle" to the console.</li>
+          <br>
+          <p>var shapes = [“triangle”, “square”, “circle”];</p>
+          <p>console.log(shapes[0])</p>
           <br>
         </ul>
       </section>
     </main>
 
     <footer>
-      <p>I can code!</p>
+      <h4>This study guide was created by Matt Kelly, during The University of Adelaide's Coding Bootcamp 2023.</h4>
     </footer>
     <script src="./assets/script.js"></script>
   </body>
